added styling to footer to push to bottom of page, added styling to game to make footer relative to game container.

--- a/src/components/Game/style.css
+++ b/src/components/Game/style.css
@@ -1,3 +1,13 @@
+.wrapper{
+    display: flex;
+    min-height: 80%;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 90%;
+    margin: 0 auto;
+}
 img{
     /* display: inline-block; */
     padding: 10px;
